# xtensor-r

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md  azure-pipelines.yml  environment-dev-win.yml  environment-dev.yml  install_and_test.R  r-packaging.sh  xtensor-rConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  azure-pipelines-osx.yml  unix-build.yml
.github/workflows/: linux.yml  osx.yml  windows.yml
R/: RcppExports.R
R-package/: DESCRIPTION  LICENSE  xtensor-r.Rproj
R-package/R/: RcppExports.R
R-package/man/: rcpp_hello_world.Rd  xtensor-package.Rd  xtensor_r_example.Rd
R-package/src/: rcpp_hello_xtensor.cpp  xtensor_r_example.cpp
cmake/: FindR.cmake
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  array_tensor.rst  basic_usage.rst  conf.py  index.rst  installation.rst  r_peculiarities.rst  rarray.rst  releasing.rst  roptional.rst  rtensor.rst  rvectorize.rst
include/xtensor-r/: rarray.hpp  rcontainer.hpp  rcpp_extensions.hpp  roptional.hpp  rtensor.hpp  rvectorize.hpp  xtensor_r_config.hpp
inst/include/: xtensor.h
inst/include/xtensor-r/: rarray.hpp  rcontainer.hpp  rtensor.hpp  rxarray.hpp  xtensor_r_config.hpp
man/: xtensor-package.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  rcpp_hello_xtensor.cpp
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  gtest-pthread.patch  main.cpp  rcpp_tests.cpp  test-environment.yml  test_common.hpp  test_rarray.cpp  test_roptional.cpp  test_rreducer.cpp  test_rtensor.cpp  test_rvectorize.cpp  test_sfinae.cpp  unittest.R
